--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1"
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1",
+    "typeorm": "typeorm-ts-node-esm -d ./src/db/ormconfig.ts",
+    "migration:create": "typeorm-ts-node-esm migration:create ./src/db/migrations/$npm_config_name",
+    "migration:generate": "npm run typeorm migration:generate ./src/db/migrations/$npm_config_name",
+    "migration:show": "npm run typeorm migration:show",
+    "migration:run": "npm run typeorm migration:run",
+    "migration:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.6",
@@ -35,7 +41,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sqlite3": "^5.0.8",
-    "typeorm": "^0.3.6"
+    "typeorm": "0.3.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -56,7 +62,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.0",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
   },
